# uv-init-tui

./: .gitignore  pyproject.toml  styles.tcss
src/uv_init_tui/: __init__.py  __main__.py  app.py  config.py  pyproject_edit.py  uv_cmd.py
static/markdown/: uv_init_help.md
tests/: test___init__.py  test___main__.py  test_app.py  test_config.py  test_pyproject_edit.py  test_uv_cmd.py
