[project]
name = "uv-init-tui"
version = "0.1.0"
description = "Textual wizard for uv init"
readme = "README.md"
authors = [
    { name = "Max Ludden", email = "maxludden@me.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.3",
    "rich-gradient>=0.3.11",
    "textual>=8.0.0",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
]

[project.scripts]
uv-init-tui = "uv_init_tui.app:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"
